ecmascript/parser/tests/test262-error-references/fail/6e792760337980f7.js.stderr
error: Not an utf-8 character: 55296
 --> $DIR/tests/test262-parser/fail/6e792760337980f7.js:1:1
  |
1 | \uD800\
  | ^^^^^^

